Switch old java URL to new URI